--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@radix-ui/react-toggle": "1.1.1",
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
+    "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "9.4.0",
     "@react-three/postprocessing": "3.0.4",
     "@vercel/analytics": "1.3.1",
