chore: update rewrite

--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,8 @@
 {
   "rewrites": [
     {
-      "source": "/docs/:path*",
-      "destination": "https://docs.usewisp.dev/:path*"
-    },
-    {
-      "source": "/docs",
-      "destination": "https://docs.usewisp.dev"
+      "source": "/docs/:match*",
+      "destination": "https://docs.usewisp.dev/:match*"
     }
   ]
 }
